# ssh-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  tasks.md
references/: mcp.md  paramiko-ssh.md  uv.md
ssh_mcp/: __init__.py  __main__.py  cli.py  config.py  connection.py  executor.py  server.py
ssh_mcp/tests/: README.md  __init__.py  mock_ssh_server.py  test_config.py  test_connection.py  test_executor.py  test_server.py
